--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -10,11 +10,11 @@
 
 	<link rel="stylesheet" href="./vendors/open-iconic/font/css/open-iconic.min.css">
 
-	<link rel="stylesheet" href="./animation.css" />
-	<link rel="stylesheet" href="./global.css" />
-	<link rel="stylesheet" href="./interface.css" />
+	<link rel="stylesheet" href="./css/animation.css" />
+	<link rel="stylesheet" href="./css/global.css" />
+	<link rel="stylesheet" href="./css/interface.css" />
 
-	<link rel="stylesheet" href="./documentation.css" />
+	<link rel="stylesheet" href="./css/documentation.css" />
 </head>
 
 <body>
@@ -50,42 +50,46 @@
 			</h2>
 			<hr/>
 			<ul>
-                <li>
-                    Pixi.js -- <a href="http://www.pixijs.com/">website</a>
-                </li>
-
-                <li>
-                    Desteer.hx -- <a href="https://github.com/DropechoStudios/desteer.hx/">repository</a>
-                </li>
-
+				<li>
+					Pixi.js -- <a href="http://www.pixijs.com/">website</a>
+				</li>
+				<li>
+					Desteer.hx -- <a href="https://github.com/DropechoStudios/desteer.hx/">repository</a>
+				</li>
+				<li>
+					Howler.js -- <a href="https://howlerjs.com/">repository</a>
+				</li>
+				<li>
+					js-sha3 -- <a href="https://github.com/emn178/js-sha3">repository</a>
+				</li>
 				<li>
 					Bubblegum Sans -- <a href="https://fonts.google.com/specimen/Bubblegum+Sans">google font</a>
 				</li>
-
-                <li>
+				<li>
 					Open Iconic -- <a href="https://www.useiconic.com/open">website</a>
 				</li>
 			</ul>
 		</article>
 
-        <article class="Credits">
-            <h2>
+		<article class="Credits">
+			<h2>
                 Work credits
             </h2>
-            <hr/>
-            <h3> LAB </h3>
-            <ul>
-                <li> File API drag and drop </li>
-                <li> Maggot system </li>
-                <li> Maggot class with flocking mechanism </li>
-                <li> Text class </li>
-            </ul>
+			<hr/>
+			<h3> LAB </h3>
+			<ul>
+				<li> File API drag and drop </li>
+				<li> Maggot system </li>
+				<li> Maggot class with flocking mechanism </li>
+				<li> Text class </li>
+				
+			</ul>
 
-            <h3> Stoney </h3>
-            <ul>
+			<h3> Stoney </h3>
+			<ul>
 
-            </ul>
-        </article>
+			</ul>
+		</article>
 
 		<article class="ChangeLog">
 			<h2>
@@ -93,11 +97,11 @@
 			</h2>
 			<hr/>
 			<ul>
-                <li>2017-11-30: Implement maggot flocking behavior</li>
-                <li>2017-11-29: Implement Text component</li>
-                <li>2017-11-28: Implement menu</li>
-                <li>2017-11-26: Implement layer system with maggot and food </li>
-                <li>2017-11-25: Initialize the project, implement file drag and drop</li>
+				<li>2017-11-30: Implement maggot flocking behavior</li>
+				<li>2017-11-29: Implement Text component</li>
+				<li>2017-11-28: Implement menu</li>
+				<li>2017-11-26: Implement layer system with maggot and food </li>
+				<li>2017-11-25: Initialize the project, implement file drag and drop</li>
 			</ul>
 		</article>
 
@@ -115,8 +119,8 @@
 		<button id="HideCopyright">hide</button>
 	</footer>
 
-	<script src="./src/store.js" charset="utf-8"></script>
-	<script src="./src/copyright-hiding.js" charset="utf-8"></script>
+	<script src="./js/store.js" charset="utf-8"></script>
+	<script src="./js/copyright-hiding.js" charset="utf-8"></script>
 
 </body>
 
