Add some more stuff

--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -78,16 +78,16 @@
 			<hr/>
 			<h3> LAB </h3>
 			<ul>
+				<li> Structure of index.js </li>
 				<li> File API drag and drop </li>
 				<li> Maggot system </li>
 				<li> Maggot class with flocking mechanism </li>
 				<li> Text class </li>
-				
+				<li> Bitemark class </li>
 			</ul>
 
 			<h3> Stoney </h3>
 			<ul>
-
 			</ul>
 		</article>
 
