--- a/project1/index.html
+++ b/project1/index.html
@@ -23,7 +23,7 @@
 	</nav>
 
 	<nav class="Absolute LastAppear FlexCenter" id="Bottom">
-		<a class="BubbleButton FlexCenter" href="./project.html">
+		<a class="BubbleButton FlexCenter" href="https://people.rit.edu/hhn2884/230/project3/">
 			project
 		</a>
 	</nav>
