--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -89,8 +89,9 @@
 			<hr>
 			<h3>Mechanics</h3>
 			<p>
-				Play will be in charge of 9 initial maggots. They must feed these maggot with unique images then can find on the internet, or their personal images. The catch is, they cannot feed the same image twice! The area (in pixel) of the food item will be for
-				internal calculation. The maximum width of a food item will be cramped down to 100px. The height will be scaled by the original ratio accordingly.
+				Player will be in charge of a swarm of maggots. They must feed these maggots by dragging and dropping images on the internet or from the desktop. The image dropped must be unique and player will not be able to feed the same image twice. The maximum width of a food item will be cramped down to 100px. The height will be scaled by the original ratio accordingly.
+
+				So to cheat in the game, use some long Korean comic strip.
 			</p>
 
 			<h3>Control</h3>
