--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -23,7 +23,7 @@
 		<article class="FadeInArticle First">
 			<h2>concept</h2>
 			<hr>
-			<p> A digital pet game where the pet is a swarm of growing maggot and player feed them by dropping image file into the game. </p>
+			<p> A digital pet game where the pet is a swarm of growing maggots and player feed them by dropping image file into the game scene. </p>
 		</article>
 
 		<article class="FadeInArticle Second">
@@ -64,7 +64,7 @@
 			<hr>
 			<h3>Graphic</h3>
 			<p>
-				If it makes the player vomit, good. If it didn't, well too bad.
+				Simple maggot on black background
 			</p>
 			<h3>Music</h3>
 			<p>
