--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<section id="Interface" class="SideBar">
-		<a class="InterfaceButton" href="./index.html" target="_blank">
+		<a class="InterfaceButton" href="../index.html" target="_blank">
 			<h3>play</h3>
 			<span class="oi" data-glyph="media-play"></span>
 		</a>
