--- a/project3/index.html
+++ b/project3/index.html
@@ -21,6 +21,7 @@
 	<script src="./components/Text.js" charset="utf-8"></script>
 	<script src="./components/UserInterface.js" charset="utf-8"></script>
 	<script src="./components/Bitemark.js" charset="utf-8"></script>
+	<script src="./components/Button.js" charset="utf-8"></script>
 
 	<!-- Utilities -->
 	<script src="./utils/Helper.js" charset="utf-8"></script>
