--- a/project3/index.html
+++ b/project3/index.html
@@ -18,6 +18,7 @@
 
 	<!-- Components -->
 	<script src="./components/Maggot.js" charset="utf-8"></script>
+	<script src="./components/Food.js" charset="utf-8"></script>
 	<script src="./components/Text.js" charset="utf-8"></script>
 	<script src="./components/UserInterface.js" charset="utf-8"></script>
 	<script src="./components/Bitemark.js" charset="utf-8"></script>
