Warning notification are done

--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -39,7 +39,7 @@
 			<hr/>
 			<ul>
 				<li>
-					The works done in this project is authored by lab at mail dot rit dot edu, both CSS and JavaScript.
+					The works done in this project is authored by lab at mail dot rit dot edu and Stoney Reed.
 				</li>
 			</ul>
 		</article>
@@ -52,6 +52,12 @@
 			<ul>
 				<li>
 					Pixi.js -- <a href="http://www.pixijs.com/">website</a>
+				</li>
+				<li>
+					Maggot Particle and the Maggot Sprite -- <a href="http://pixijs.io/examples/#/demos/batch.js">Pixi Example</a>
+				</li>
+				<li>
+					Maggot sounds -- <a href=""> youtube </a>
 				</li>
 				<li>
 					Desteer.hx -- <a href="https://github.com/DropechoStudios/desteer.hx/">repository</a>
@@ -84,10 +90,14 @@
 				<li> Maggot class with flocking mechanism </li>
 				<li> Text class </li>
 				<li> Bitemark class </li>
+				<li> Score tracker class </li>
+				<li> Store utilities </li>
 			</ul>
 
 			<h3> Stoney </h3>
 			<ul>
+				<li> UserInterface layout and implementation </li>
+				<li> Sound assets </li>
 			</ul>
 		</article>
 
@@ -97,6 +107,8 @@
 			</h2>
 			<hr/>
 			<ul>
+				<li>2017-12-7: Implement maggot count for score</li>
+				<li>2017-12-5: Implement maggot wandering</li>
 				<li>2017-11-30: Implement maggot flocking behavior</li>
 				<li>2017-11-29: Implement Text component</li>
 				<li>2017-11-28: Implement menu</li>
