--- a/project3/index.html
+++ b/project3/index.html
@@ -20,12 +20,14 @@
 	<script src="./components/Maggot.js" charset="utf-8"></script>
 	<script src="./components/Food.js" charset="utf-8"></script>
 	<script src="./components/Text.js" charset="utf-8"></script>
-	<script src="./components/UserInterface.js" charset="utf-8"></script>
 	<script src="./components/Bitemark.js" charset="utf-8"></script>
 	<script src="./components/Button.js" charset="utf-8"></script>
 	<script src="./components/Score.js" charset="utf-8"></script>
+	<script src="./components/Sound.js" charset="utf-8"></script>
+	<script src="./components/Notification.js" charset="utf-8"></script>
 
 	<!-- Utilities -->
+	<script src="./utils/UserInterface.js" charset="utf-8"></script>
 	<script src="./utils/Helper.js" charset="utf-8"></script>
 	<script src="./utils/File.js" charset="utf-8"></script>
 	<script src="./utils/Store.js" charset="utf-8"></script>
@@ -33,7 +35,6 @@
 	<script src="./utils/DropZone.js" charset="utf-8"></script>
 	<script src="./utils/DragAndDrop.js" charset="utf-8"></script>
 	<script src="./utils/Zoom.js" charset="utf-8"></script>
-	<script src="./utils/Sound.js" charset="utf-8"></script>
 
   <script src="./index.js" charset="utf-8"></script>
 </body>
