--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -41,6 +41,9 @@
 				<li>
 					The works done in this project is authored by lab at mail dot rit dot edu and Stoney Reed.
 				</li>
+				<li>
+					In order to avoid watch, the count will be batch updated after a piece of food has been completely consumed
+				</li>
 			</ul>
 		</article>
 
