Adding refernce to the sound

--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -60,7 +60,10 @@
 					Maggot Particle and the Maggot Sprite -- <a href="http://pixijs.io/examples/#/demos/batch.js">Pixi Example</a>
 				</li>
 				<li>
-					Maggot sounds -- <a href=""> youtube </a>
+					Maggot walking sounds -- <a href="https://www.youtube.com/watch?v=EOZZu9C4hoM"> youtube </a>
+				</li>
+				<li>
+					Maggot eating sounds -- <a href="https://www.youtube.com/watch?v=V6tCei4a_nU"> youtube </a>
 				</li>
 				<li>
 					Desteer.hx -- <a href="https://github.com/DropechoStudios/desteer.hx/">repository</a>
