--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -98,12 +98,14 @@
 				<li> Bitemark class </li>
 				<li> Score tracker class </li>
 				<li> Store utilities </li>
+				<li> Documentation page </li>
 			</ul>
 
 			<h3> Stoney </h3>
 			<ul>
 				<li> UserInterface layout and implementation </li>
 				<li> Sound assets </li>
+				<li> Button class </li>
 			</ul>
 		</article>
 
