--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -42,6 +42,9 @@
 					In order to avoid watch, the count will be batch updated after a piece of food has been completely consumed
 				</li>
 				<li>
+					Images from remote host might subject to CORS. Some will display, some will simply not.
+				</li>
+				<li>
 					The works done in this project is authored by lab at mail dot rit dot edu and Stoney Reed.
 				</li>
 			</ul>
