--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -63,7 +63,7 @@
 					Maggot Particle and the Maggot Sprite -- <a href="http://pixijs.io/examples/#/demos/batch.js">Pixi Example</a>
 				</li>
 				<li>
-					Maggot walking sounds -- <a href="https://www.youtube.com/watch?v=EOZZu9C4hoM"> youtube </a>
+					Maggot walking sounds -- <a href="https://www.youtube.com/watch?v=bbgLVPQIMpk"> youtube </a>
 				</li>
 				<li>
 					Maggot eating sounds -- <a href="https://www.youtube.com/watch?v=V6tCei4a_nU"> youtube </a>
@@ -109,6 +109,10 @@
 				<li> UserInterface layout and implementation </li>
 				<li> Sound assets </li>
 				<li> Button class </li>
+				<li> Local Storage API <li>
+				<li> Text class <li>
+				<li> Store utilities <li>
+				<li> Documentation page <li>
 			</ul>
 		</article>
 
