Added in end tag for list

--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -109,10 +109,10 @@
 				<li> UserInterface layout and implementation </li>
 				<li> Sound assets </li>
 				<li> Button class </li>
-				<li> Local Storage API <li>
-				<li> Text class <li>
-				<li> Store utilities <li>
-				<li> Documentation page <li>
+				<li> Local Storage API </li>
+				<li> Text class </li>
+				<li> Store utilities </li>
+				<li> Documentation page </li>
 			</ul>
 		</article>
 
