Changes to documentation and button
I updated the grammer for the documentation and added in "above and beyond" list of things

--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -34,18 +34,36 @@
 		<h1>Documentation</h1>
 		<article class="Notes">
 			<h2>
-				Notes
+				Above and Beyond
 			</h2>
 			<hr/>
 			<ul>
 				<li>
-					In order to avoid watch, the count will be batch updated after a piece of food has been completely consumed
+					For our HTML5 feature we used localStorage to save the number of maggots on the screen.
 				</li>
 				<li>
-					Images from remote host might subject to CORS. Some will display, some will simply not.
+					We created a system that allows a user to drag and drop images onto the screen.
 				</li>
 				<li>
-					The works done in this project is authored by lab at mail dot rit dot edu and Stoney Reed.
+					We have created a large network of classes and containers.
+				</li>
+				<li>
+					Our game has steering behaviors for each of the maggots.
+				</li>
+				<li>
+					We have a spawning system for maggots that eat enough images.
+				</li>
+				<li>
+					The application has sounds for the maggots moving and for the maggots eating.
+				</li>
+				<li>
+					We have a maggot counter that counts all the maggots on the screen.
+				</li>
+				<li>
+					Some of the challenges we faced was figuring out the layout of our code, getting the maggots to eat the images and learning PixiJS as we worked.
+				</li>
+				<li>
+					The work was done by Lab and Stoney Reed. The project we have created is a Tamagotchi game in which you feed your pet maggots and watch them multiply. 
 				</li>
 			</ul>
 		</article>
