--- a/project3/documentation/index.html
+++ b/project3/documentation/index.html
@@ -42,7 +42,7 @@
 					We used localStorage to save the image hash set as well as the number of maggots on the scene.
 				</li>
 				<li>
-					We created a system that allows player to drag and drop images from the desktop (Binary form) or from other website (URL form) onto the screen.
+					We created a system that allows player to drag and drop images from the desktop (Binary form) or from another website (URL form) onto the game scene.
 				</li>
 				<li>
 					We have created a large network of classes and containers. (8 classes)
